--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.12)
 project(Django CXX)
 set(CMAKE_CXX_STANDARD 20)
 
-set (MY_CXX_FLAGS "-pthread -fPIC")
+set (MY_CXX_FLAGS "-pthread")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MY_CXX_FLAGS}")
 
 option (FORCE_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang only)." TRUE)
