--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -3,8 +3,9 @@ cmake_minimum_required(VERSION 3.12)
 project(Django CXX)
 set(CMAKE_CXX_STANDARD 20)
 
+set (COMMON_WARNNING_FLAG "-Wall -Wextra")
 set (MY_CXX_FLAGS "-pthread")
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MY_CXX_FLAGS}")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MY_CXX_FLAGS} ${COMMON_WARNNING_FLAG}")
 
 option (FORCE_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang only)." TRUE)
 if (${FORCE_COLORED_OUTPUT})
@@ -14,6 +15,9 @@ if (${FORCE_COLORED_OUTPUT})
        add_compile_options (-fcolor-diagnostics)
     endif ()
 endif ()
+
+set(CMAKE_CXX_FLAGS_DEBUG_INIT "-O0 -ggdb -fsanitize=address")
+set(CMAKE_CXX_FLAGS_RELEASE_INIT "-Ofast -s")
 
 add_executable(engine main.cpp)
 add_subdirectory(src)
