Add basic variable supporting

--- a/engine/src/parser/CMakeLists.txt
+++ b/engine/src/parser/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(HEADER_DIRS "${CMAKE_SOURCE_DIR}/include")
 
+find_package(Boost 1.80.0 REQUIRED COMPONENTS regex)
 
 add_library(parser STATIC parser.cpp ${HEADER_DIRS})
 target_include_directories(parser PUBLIC ${HEADER_DIRS})
@@ -7,4 +8,4 @@ target_include_directories(parser PUBLIC ${HEADER_DIRS})
 add_library(variable STATIC variable.cpp)
 target_include_directories(variable PUBLIC ${HEADER_DIRS})
 
-target_link_libraries(parser PUBLIC variable)
+target_link_libraries(parser PUBLIC variable Boost::regex)
