--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -4,7 +4,7 @@ project(Django CXX)
 set(CMAKE_CXX_STANDARD 20)
 
 set (COMMON_WARNNING_FLAG "-Wall -Wextra")
-set (MY_CXX_FLAGS "-pthread")
+set (MY_CXX_FLAGS "")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MY_CXX_FLAGS} ${COMMON_WARNNING_FLAG}")
 
 option (FORCE_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang only)." TRUE)
@@ -17,7 +17,7 @@ if (${FORCE_COLORED_OUTPUT})
 endif ()
 
 set(CMAKE_CXX_FLAGS_DEBUG_INIT "-O0 -ggdb -fsanitize=address")
-set(CMAKE_CXX_FLAGS_RELEASE_INIT "-Ofast -s")
+set(CMAKE_CXX_FLAGS_RELEASE_INIT "-Ofast -s -flto")
 
 add_executable(engine main.cpp)
 add_subdirectory(src)
