--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required(VERSION 3.12)
 project(Django CXX)
 set(CMAKE_CXX_STANDARD 20)
 
+include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+conan_basic_setup()
+
 set (COMMON_WARNNING_FLAG "-Wall -Wextra")
 set (MY_CXX_FLAGS "")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MY_CXX_FLAGS} ${COMMON_WARNNING_FLAG}")
