--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -7,7 +7,7 @@ include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
 set (COMMON_WARNNING_FLAG "-Wall -Wextra")
-set (MY_CXX_FLAGS "")
+set (MY_CXX_FLAGS "-fcoroutines -pthread")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MY_CXX_FLAGS} ${COMMON_WARNNING_FLAG}")
 
 option (FORCE_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang only)." TRUE)
