--- a/engine/src/CMakeLists.txt
+++ b/engine/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(HEADER_DIRS "${CMAKE_SOURCE_DIR}/include")
 
-find_package(nlohmann_json 3.11.2 REQUIRED)
+find_package(nlohmann_json 3.11.2 CONFIG REQUIRED PATHS ${CMAKE_BINARY_DIR})
 
 add_library(Django STATIC Django.cpp)
 target_include_directories(Django PUBLIC ${HEADER_DIRS})
