--- a/engine/src/CMakeLists.txt
+++ b/engine/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(HEADER_DIRS "${CMAKE_SOURCE_DIR}/include")
+set(HEADER_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/../include")
 
 find_package(nlohmann_json 3.11.2 CONFIG REQUIRED PATHS ${CMAKE_BINARY_DIR})
 
