--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,7 @@ jobs:
   build:
     machine:
       image: debian:sid
-    resource_class: 2xlarge
-    docker_layer_caching: true
+    resource_class: 2xlargesssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
     steps:
       - run:
           name: "Building"
