--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
   build:
     machine:
       image: debian:sid
-    resource_class: 2xlargesssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
+    resource_class: 2xlarge
     steps:
       - run:
           name: "Building"
